--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     // Power-Mock
     testImplementation('org.powermock:powermock-module-junit4:2.0.2')
     testImplementation('org.powermock:powermock-api-mockito2:2.0.2')
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
 
 }
 
